# MakingLovart

./: .dockerignore  .gitignore  AGENTS.md  App.tsx  CLAUDE.md  DOCKER_GUIDE.md  Dockerfile  LICENSE  Makefile  Making-Complete.html  PLAN_NODE_UI.md  PRIVACY_POLICY.md  README.md  REVIEW_CODE_AUDIT.md  SECURITY_ASSESSMENT.md  STUDY_REPORT.md  TERMS_OF_SERVICE.md  docker-compose.yml  env.example  index.html  metadata.json  nginx.conf  package-lock.json  package.json  styles.css  translations.ts  tsconfig.json  types.ts  vite-env.d.ts  vite.config.js  vite.config.ts  wrangler.jsonc
.claude/: settings.json  settings.local.json
.codex/: config.toml
.github/: copilot-instructions.md
components/: ABCompareOverlay.tsx  AgentBridgePanel.tsx  AgentChatPanel.tsx  AppShell.tsx  AssetLibraryPanel.tsx  BoardPanel.tsx  CanvasMentionExtension.tsx  CanvasSettings.tsx  DiagnosticBar.tsx  ElementToolbar.tsx  ErrorBoundary.tsx  FlovartCliPanel.tsx  ImageFilterPanel.tsx  InspirationPanel.tsx  LayerPanel.tsx  LayerPanelMinimizable.tsx  LayerToggleButton.tsx  MentionList.tsx  NodeWorkflowPanel.tsx  OnboardingWizard.tsx  ProjectMenu.tsx  PromptBar.tsx  RichPromptEditor.tsx  RightPanel.tsx  SettingsErrorBoundary.tsx  Toast.tsx  Toolbar.tsx  TopWorkspaceBar.tsx  WorkspaceSidebar.tsx  useCanvasBridge.ts
docs/: API_KEY_UPGRADE_PLAN.md  CLAUDE_CODE_IMPLEMENTATION_PLAN.md  CLAUDE_CODE_TRANSFORMATION_PRD.md  NODE_CANVAS_REFERENCE_UI_PRD.md  PHASE2_RUNTIME_API.md  REQUIREMENTS_FULL.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+181 files in other folders)
