[package]
name = "flovart"
version = "0.1.0"
description = "Flovart - AI-powered creative workspace"
authors = ["Flovart"]
edition = "2021"

[lib]
name = "flovart_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
